/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package com.dremio.service.reflection.proto;

option java_package = "com.dremio.service.reflection.proto";
option java_outer_classname = "ReflectionEventProto";

// Message sent over pubusb when a reflection is created/updated/deleted.
message ReflectionEventMessage {
  enum State {
    STATE_UNSPECIFIED = 0;

    STATE_ENABLED = 1;

    STATE_DISABLED = 2;

    STATE_DELETED = 3;
  }

  // Reflection id in the store.
  string id = 1;

  // Reflection name.
  string name = 2;

  // Id of the dataset.
  string dataset_id = 3;

  // State of the reflection.
  State state = 4;
}
